// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Orders Screen — Snapshots renders empty orders state 1`] = `
<View
  style={
    {
      "backgroundColor": "#F6F3FF",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F6F3FF",
        "flexDirection": "row",
        "paddingBottom": 16,
        "paddingHorizontal": 20,
        "paddingTop": 56,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderColor": "#EDE8FF",
          "borderRadius": 20,
          "borderWidth": 1,
          "height": 40,
          "justifyContent": "center",
          "marginRight": 14,
          "opacity": 1,
          "width": 40,
        }
      }
    >
      <Ionicons
        color="#1E1B4B"
        name="arrow-back"
        size={20}
      />
    </View>
    <View>
      <Text
        style={
          {
            "color": "#7C7CB0",
            "fontSize": 12,
          }
        }
      >
        0
         product
        s
         ordered
      </Text>
      <Text
        style={
          {
            "color": "#1E1B4B",
            "fontSize": 22,
            "fontWeight": "bold",
          }
        }
      >
        My Orders
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "gap": 12,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EDE8FF",
          "borderRadius": 40,
          "height": 80,
          "justifyContent": "center",
          "width": 80,
        }
      }
    >
      <Ionicons
        color="#7C5FFF"
        name="bag-outline"
        size={36}
      />
    </View>
    <Text
      style={
        {
          "color": "#1E1B4B",
          "fontSize": 16,
          "fontWeight": "600",
        }
      }
    >
      No orders yet
    </Text>
    <Text
      style={
        {
          "color": "#7C7CB0",
          "fontSize": 13,
        }
      }
    >
      Items you order will appear here
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#7C5FFF",
          "borderRadius": 16,
          "marginTop": 8,
          "opacity": 1,
          "paddingHorizontal": 28,
          "paddingVertical": 13,
        }
      }
    >
      <Text
        style={
          {
            "color": "white",
            "fontSize": 14,
            "fontWeight": "bold",
          }
        }
      >
        Start Shopping
      </Text>
    </View>
  </View>
</View>
`;

exports[`Orders Screen — Snapshots renders multiple orders 1`] = `
<View
  style={
    {
      "backgroundColor": "#F6F3FF",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F6F3FF",
        "flexDirection": "row",
        "paddingBottom": 16,
        "paddingHorizontal": 20,
        "paddingTop": 56,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderColor": "#EDE8FF",
          "borderRadius": 20,
          "borderWidth": 1,
          "height": 40,
          "justifyContent": "center",
          "marginRight": 14,
          "opacity": 1,
          "width": 40,
        }
      }
    >
      <Ionicons
        color="#1E1B4B"
        name="arrow-back"
        size={20}
      />
    </View>
    <View>
      <Text
        style={
          {
            "color": "#7C7CB0",
            "fontSize": 12,
          }
        }
      >
        2
         product
        s
         ordered
      </Text>
      <Text
        style={
          {
            "color": "#1E1B4B",
            "fontSize": 22,
            "fontWeight": "bold",
          }
        }
      >
        My Orders
      </Text>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "padding": 20,
        "paddingBottom": 40,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "white",
            "borderColor": "#D1FAE5",
            "borderRadius": 20,
            "borderWidth": 1,
            "elevation": 3,
            "marginBottom": 16,
            "overflow": "hidden",
            "shadowColor": "#065F46",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.07,
            "shadowRadius": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#D1FAE5",
              "flexDirection": "row",
              "gap": 6,
              "paddingHorizontal": 14,
              "paddingVertical": 8,
            }
          }
        >
          <Ionicons
            color="#065F46"
            name="checkmark-circle"
            size={15}
          />
          <Text
            style={
              {
                "color": "#065F46",
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "700",
              }
            }
          >
            Order Completed
          </Text>
          <Text
            style={
              {
                "color": "#065F46",
                "fontSize": 11,
                "opacity": 0.7,
              }
            }
          >
            #
            J1-0
          </Text>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 14,
              "padding": 14,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#EDE8FF",
                "borderRadius": 14,
                "height": 80,
                "overflow": "hidden",
                "width": 80,
              }
            }
          >
            <Image
              contentFit="cover"
              source={
                {
                  "uri": "https://example.com/ring.jpg",
                }
              }
              style={
                {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              numberOfLines={2}
              style={
                {
                  "color": "#1E1B4B",
                  "fontSize": 14,
                  "fontWeight": "600",
                  "marginBottom": 4,
                }
              }
            >
              Amethyst Ring
            </Text>
            <Text
              style={
                {
                  "color": "#7C7CB0",
                  "fontSize": 12,
                  "marginBottom": 8,
                }
              }
            >
              Jewellery
            </Text>
            <Text
              style={
                {
                  "color": "#1E1B4B",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              ₹
              3,999
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "borderTopColor": "#EDE8FF",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "gap": 10,
              "paddingHorizontal": 14,
              "paddingVertical": 10,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#7C5FFF",
                "borderRadius": 10,
                "flex": 1,
                "flexDirection": "row",
                "gap": 5,
                "height": 38,
                "justifyContent": "center",
                "opacity": 1,
              }
            }
          >
            <Ionicons
              color="white"
              name="star-outline"
              size={14}
            />
            <Text
              style={
                {
                  "color": "white",
                  "fontSize": 12,
                  "fontWeight": "600",
                }
              }
            >
              Write Review
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderColor": "#EDE8FF",
                "borderRadius": 10,
                "borderWidth": 1.5,
                "flex": 1,
                "flexDirection": "row",
                "gap": 5,
                "height": 38,
                "justifyContent": "center",
                "opacity": 1,
              }
            }
          >
            <Ionicons
              color="#7C7CB0"
              name="chatbubble-outline"
              size={14}
            />
            <Text
              style={
                {
                  "color": "#7C7CB0",
                  "fontSize": 12,
                  "fontWeight": "600",
                }
              }
            >
              Comment
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "white",
            "borderColor": "#D1FAE5",
            "borderRadius": 20,
            "borderWidth": 1,
            "elevation": 3,
            "marginBottom": 16,
            "overflow": "hidden",
            "shadowColor": "#065F46",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.07,
            "shadowRadius": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#D1FAE5",
              "flexDirection": "row",
              "gap": 6,
              "paddingHorizontal": 14,
              "paddingVertical": 8,
            }
          }
        >
          <Ionicons
            color="#065F46"
            name="checkmark-circle"
            size={15}
          />
          <Text
            style={
              {
                "color": "#065F46",
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "700",
              }
            }
          >
            Order Completed
          </Text>
          <Text
            style={
              {
                "color": "#065F46",
                "fontSize": 11,
                "opacity": 0.7,
              }
            }
          >
            #
            A1-1
          </Text>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 14,
              "padding": 14,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#EDE8FF",
                "borderRadius": 14,
                "height": 80,
                "overflow": "hidden",
                "width": 80,
              }
            }
          >
            <Image
              contentFit="cover"
              source={
                {
                  "uri": "https://example.com/dress.jpg",
                }
              }
              style={
                {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              numberOfLines={2}
              style={
                {
                  "color": "#1E1B4B",
                  "fontSize": 14,
                  "fontWeight": "600",
                  "marginBottom": 4,
                }
              }
            >
              Silk Wrap Dress
            </Text>
            <Text
              style={
                {
                  "color": "#7C7CB0",
                  "fontSize": 12,
                  "marginBottom": 8,
                }
              }
            >
              Apparel
            </Text>
            <Text
              style={
                {
                  "color": "#1E1B4B",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              ₹
              5,500
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "borderTopColor": "#EDE8FF",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "gap": 10,
              "paddingHorizontal": 14,
              "paddingVertical": 10,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#7C5FFF",
                "borderRadius": 10,
                "flex": 1,
                "flexDirection": "row",
                "gap": 5,
                "height": 38,
                "justifyContent": "center",
                "opacity": 1,
              }
            }
          >
            <Ionicons
              color="white"
              name="star-outline"
              size={14}
            />
            <Text
              style={
                {
                  "color": "white",
                  "fontSize": 12,
                  "fontWeight": "600",
                }
              }
            >
              Write Review
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderColor": "#EDE8FF",
                "borderRadius": 10,
                "borderWidth": 1.5,
                "flex": 1,
                "flexDirection": "row",
                "gap": 5,
                "height": 38,
                "justifyContent": "center",
                "opacity": 1,
              }
            }
          >
            <Ionicons
              color="#7C7CB0"
              name="chatbubble-outline"
              size={14}
            />
            <Text
              style={
                {
                  "color": "#7C7CB0",
                  "fontSize": 12,
                  "fontWeight": "600",
                }
              }
            >
              Comment
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Orders Screen — Snapshots renders one order — Reviewed state shown 1`] = `
<View
  style={
    {
      "backgroundColor": "#F6F3FF",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F6F3FF",
        "flexDirection": "row",
        "paddingBottom": 16,
        "paddingHorizontal": 20,
        "paddingTop": 56,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderColor": "#EDE8FF",
          "borderRadius": 20,
          "borderWidth": 1,
          "height": 40,
          "justifyContent": "center",
          "marginRight": 14,
          "opacity": 1,
          "width": 40,
        }
      }
    >
      <Ionicons
        color="#1E1B4B"
        name="arrow-back"
        size={20}
      />
    </View>
    <View>
      <Text
        style={
          {
            "color": "#7C7CB0",
            "fontSize": 12,
          }
        }
      >
        1
         product
         ordered
      </Text>
      <Text
        style={
          {
            "color": "#1E1B4B",
            "fontSize": 22,
            "fontWeight": "bold",
          }
        }
      >
        My Orders
      </Text>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "padding": 20,
        "paddingBottom": 40,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "white",
            "borderColor": "#D1FAE5",
            "borderRadius": 20,
            "borderWidth": 1,
            "elevation": 3,
            "marginBottom": 16,
            "overflow": "hidden",
            "shadowColor": "#065F46",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.07,
            "shadowRadius": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#D1FAE5",
              "flexDirection": "row",
              "gap": 6,
              "paddingHorizontal": 14,
              "paddingVertical": 8,
            }
          }
        >
          <Ionicons
            color="#065F46"
            name="checkmark-circle"
            size={15}
          />
          <Text
            style={
              {
                "color": "#065F46",
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "700",
              }
            }
          >
            Order Completed
          </Text>
          <Text
            style={
              {
                "color": "#065F46",
                "fontSize": 11,
                "opacity": 0.7,
              }
            }
          >
            #
            J1-0
          </Text>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 14,
              "padding": 14,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#EDE8FF",
                "borderRadius": 14,
                "height": 80,
                "overflow": "hidden",
                "width": 80,
              }
            }
          >
            <Image
              contentFit="cover"
              source={
                {
                  "uri": "https://example.com/ring.jpg",
                }
              }
              style={
                {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              numberOfLines={2}
              style={
                {
                  "color": "#1E1B4B",
                  "fontSize": 14,
                  "fontWeight": "600",
                  "marginBottom": 4,
                }
              }
            >
              Amethyst Ring
            </Text>
            <Text
              style={
                {
                  "color": "#7C7CB0",
                  "fontSize": 12,
                  "marginBottom": 8,
                }
              }
            >
              Jewellery
            </Text>
            <Text
              style={
                {
                  "color": "#1E1B4B",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              ₹
              3,999
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "borderTopColor": "#EDE8FF",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "gap": 10,
              "paddingHorizontal": 14,
              "paddingVertical": 10,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#D1FAE5",
                "borderRadius": 10,
                "flex": 1,
                "flexDirection": "row",
                "gap": 5,
                "height": 38,
                "justifyContent": "center",
                "opacity": 1,
              }
            }
          >
            <Ionicons
              color="#065F46"
              name="checkmark-circle"
              size={14}
            />
            <Text
              style={
                {
                  "color": "#065F46",
                  "fontSize": 12,
                  "fontWeight": "600",
                }
              }
            >
              Reviewed
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderColor": "#EDE8FF",
                "borderRadius": 10,
                "borderWidth": 1.5,
                "flex": 1,
                "flexDirection": "row",
                "gap": 5,
                "height": 38,
                "justifyContent": "center",
                "opacity": 1,
              }
            }
          >
            <Ionicons
              color="#7C7CB0"
              name="chatbubble-outline"
              size={14}
            />
            <Text
              style={
                {
                  "color": "#7C7CB0",
                  "fontSize": 12,
                  "fontWeight": "600",
                }
              }
            >
              Comment
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Orders Screen — Snapshots renders one order — Write Review button shown 1`] = `
<View
  style={
    {
      "backgroundColor": "#F6F3FF",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F6F3FF",
        "flexDirection": "row",
        "paddingBottom": 16,
        "paddingHorizontal": 20,
        "paddingTop": 56,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderColor": "#EDE8FF",
          "borderRadius": 20,
          "borderWidth": 1,
          "height": 40,
          "justifyContent": "center",
          "marginRight": 14,
          "opacity": 1,
          "width": 40,
        }
      }
    >
      <Ionicons
        color="#1E1B4B"
        name="arrow-back"
        size={20}
      />
    </View>
    <View>
      <Text
        style={
          {
            "color": "#7C7CB0",
            "fontSize": 12,
          }
        }
      >
        1
         product
         ordered
      </Text>
      <Text
        style={
          {
            "color": "#1E1B4B",
            "fontSize": 22,
            "fontWeight": "bold",
          }
        }
      >
        My Orders
      </Text>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "padding": 20,
        "paddingBottom": 40,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "white",
            "borderColor": "#D1FAE5",
            "borderRadius": 20,
            "borderWidth": 1,
            "elevation": 3,
            "marginBottom": 16,
            "overflow": "hidden",
            "shadowColor": "#065F46",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.07,
            "shadowRadius": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#D1FAE5",
              "flexDirection": "row",
              "gap": 6,
              "paddingHorizontal": 14,
              "paddingVertical": 8,
            }
          }
        >
          <Ionicons
            color="#065F46"
            name="checkmark-circle"
            size={15}
          />
          <Text
            style={
              {
                "color": "#065F46",
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "700",
              }
            }
          >
            Order Completed
          </Text>
          <Text
            style={
              {
                "color": "#065F46",
                "fontSize": 11,
                "opacity": 0.7,
              }
            }
          >
            #
            J1-0
          </Text>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 14,
              "padding": 14,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#EDE8FF",
                "borderRadius": 14,
                "height": 80,
                "overflow": "hidden",
                "width": 80,
              }
            }
          >
            <Image
              contentFit="cover"
              source={
                {
                  "uri": "https://example.com/ring.jpg",
                }
              }
              style={
                {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              numberOfLines={2}
              style={
                {
                  "color": "#1E1B4B",
                  "fontSize": 14,
                  "fontWeight": "600",
                  "marginBottom": 4,
                }
              }
            >
              Amethyst Ring
            </Text>
            <Text
              style={
                {
                  "color": "#7C7CB0",
                  "fontSize": 12,
                  "marginBottom": 8,
                }
              }
            >
              Jewellery
            </Text>
            <Text
              style={
                {
                  "color": "#1E1B4B",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              ₹
              3,999
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "borderTopColor": "#EDE8FF",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "gap": 10,
              "paddingHorizontal": 14,
              "paddingVertical": 10,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#7C5FFF",
                "borderRadius": 10,
                "flex": 1,
                "flexDirection": "row",
                "gap": 5,
                "height": 38,
                "justifyContent": "center",
                "opacity": 1,
              }
            }
          >
            <Ionicons
              color="white"
              name="star-outline"
              size={14}
            />
            <Text
              style={
                {
                  "color": "white",
                  "fontSize": 12,
                  "fontWeight": "600",
                }
              }
            >
              Write Review
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderColor": "#EDE8FF",
                "borderRadius": 10,
                "borderWidth": 1.5,
                "flex": 1,
                "flexDirection": "row",
                "gap": 5,
                "height": 38,
                "justifyContent": "center",
                "opacity": 1,
              }
            }
          >
            <Ionicons
              color="#7C7CB0"
              name="chatbubble-outline"
              size={14}
            />
            <Text
              style={
                {
                  "color": "#7C7CB0",
                  "fontSize": 12,
                  "fontWeight": "600",
                }
              }
            >
              Comment
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
